Add support for QMetaType::QVariant in ActiveQt

Previously when we convert the typename "QVariant" to QVaraint::Type,
it returns QVariant::Invalid. From Qt 4.7 onwards, it will return
QVariant::UserType.

Task-number: QTBUG-15157
Reviewed-by: Martin Petersson